Deprecate findByIds: not efficient in cypher query. Too much is pulled out.