@@ -7,6 +7,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 import java.io.UnsupportedEncodingException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import org.gk.model.ReactomeJavaConstants;
@@ -395,7 +396,13 @@ class RESTfulAPITests {
         
         String jwt = getJWT();
         
-        List<Long> dbIds = List.of(73894L, 9612973L, 162582L);
+//        List<Long> dbIds = List.of(73894L, 9612973L, 162582L);
+        
+        List<Long> dbIds = Arrays.asList(
+                400710L, 613449L, 5691543L, 8987656L, 9917590L, 2L, 9926675L, 8992654L,
+                423310L, 1995863L, 1042053L, 1300696L, 2265580L, 9715482L, 1551960L, 435478L
+            );
+        
         // The URL should start with "/" to make it true
         String url = BASE_URL + "findByDbIds/";
         
